修复资源下载失败bug。

--- a/view.html
+++ b/view.html
@@ -80,7 +80,7 @@
         var start = () => {
             container = document.getElementById('container');
             app = new Shadow.Player(container, {
-                server: location.origin,
+                server: '.',
                 enableThrowBall: false,
             });
             app.render();
