--- a/view.html
+++ b/view.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 
 <html lang="zh-cn">
 
@@ -67,7 +67,6 @@
     <!-- Shadow Editor -->
     <script src="build/ShadowEditor.js"></script>
     <script>
-        var container = null;
         var app = null;
 
         var getQueryString = name => {
@@ -78,8 +77,7 @@
         };
 
         var start = () => {
-            container = document.getElementById('container');
-            app = new Shadow.Player(container, {
+            app = new Shadow.Player({
                 server: '.',
                 enableThrowBall: false,
             });
@@ -89,7 +87,7 @@
             var sceneFile = getQueryString('sceneFile');
 
             if (sceneID) { // 通过/api/Scene/Load?ID=sceneID获取场景数据
-                fetch(`/api/Scene/Load?ID=${sceneID}`).then(response => {
+                fetch(`${app.options.server}/api/Scene/Load?ID=${sceneID}`).then(response => {
                     if (response.ok) {
                         response.json().then(json => {
                             if (json.Code === 200) {
@@ -99,7 +97,7 @@
                     }
                 });
             } else if (sceneFile) { // 通过/Scene/sceneID.txt获取场景数据（导出用）
-                fetch(`Scene/${sceneFile}.txt`).then(response => {
+                fetch(`${app.options.server}/Scene/${sceneFile}.txt`).then(response => {
                     if (response.ok) {
                         response.json().then(json => {
                             app.start(JSON.stringify(json));
