基本几何体。

--- a/index.html
+++ b/index.html
@@ -60,6 +60,10 @@
 
 <body>
     <div id="list">
+        <div class="item" data-id="5c178c6bc8b49a1d70668a4f">
+            <img class="thumbnail" src="Scene/image/5c178c6bc8b49a1d70668a4f.png" title="基本几何体" />
+            <div class="title">基本几何体</div>
+        </div>
         <div class="item" data-id="5c8cf9dac8b49b24dceb42e1">
             <img class="thumbnail" src="Scene/image/5c8cf9dac8b49b24dceb42e1.png" title="MMD播放" />
             <div class="title">MMD播放</div>
