--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             left: 0;
             bottom: 0;
             width: 100%;
-            margin: 4px;
+            padding: 4px;
             box-sizing: border-box;
             color: #fff;
             background-color: rgba(0, 0, 0, 0.5);
@@ -63,6 +63,10 @@
         <div class="item" data-id="5c178c6bc8b49a1d70668a4f">
             <img class="thumbnail" src="Scene/image/5c178c6bc8b49a1d70668a4f.png" title="基本几何体" />
             <div class="title">基本几何体</div>
+        </div>
+        <div class="item" data-id="5c17930ac8b49b1d70bb6a79">
+            <img class="thumbnail" src="Scene/image/5c17930ac8b49b1d70bb6a79.png" title="各种光源" />
+            <div class="title">各种光源</div>
         </div>
         <div class="item" data-id="5c8cf9dac8b49b24dceb42e1">
             <img class="thumbnail" src="Scene/image/5c8cf9dac8b49b24dceb42e1.png" title="MMD播放" />
