--- a/index.html
+++ b/index.html
@@ -68,6 +68,10 @@
             <img class="thumbnail" src="Scene/image/5c17930ac8b49b1d70bb6a79.png" title="各种光源" />
             <div class="title">各种光源</div>
         </div>
+        <div class="item" data-id="5c1798ddc8b49b1d70bb6aa4">
+            <img class="thumbnail" src="Scene/image/5c1798ddc8b49b1d70bb6aa4.png" title="落日喷泉" />
+            <div class="title">落日喷泉</div>
+        </div>
         <div class="item" data-id="5c8cf9dac8b49b24dceb42e1">
             <img class="thumbnail" src="Scene/image/5c8cf9dac8b49b24dceb42e1.png" title="MMD播放" />
             <div class="title">MMD播放</div>
