--- a/index.html
+++ b/index.html
@@ -68,13 +68,17 @@
             <img class="thumbnail" src="Scene/image/5c17930ac8b49b1d70bb6a79.png" title="各种光源" />
             <div class="title">各种光源</div>
         </div>
-        <div class="item" data-id="5c1798ddc8b49b1d70bb6aa4">
-            <img class="thumbnail" src="Scene/image/5c1798ddc8b49b1d70bb6aa4.png" title="落日喷泉" />
-            <div class="title">落日喷泉</div>
+        <div class="item" data-id="5c8dfcb9c8b49b4b943df674">
+            <img class="thumbnail" src="Scene/image/5c8dfcb9c8b49b4b943df674.png" title="寒冰射手" />
+            <div class="title">寒冰射手</div>
         </div>
         <div class="item" data-id="5c8cf9dac8b49b24dceb42e1">
             <img class="thumbnail" src="Scene/image/5c8cf9dac8b49b24dceb42e1.png" title="MMD播放" />
             <div class="title">MMD播放</div>
+        </div>
+        <div class="item" data-id="5c1798ddc8b49b1d70bb6aa4">
+            <img class="thumbnail" src="Scene/image/5c1798ddc8b49b1d70bb6aa4.png" title="落日喷泉" />
+            <div class="title">落日喷泉</div>
         </div>
     </div>
     <iframe id="content" frameborder="no" border="0" marginwidth="0" marginheight="0" scrolling="no"></iframe>
