--- a/index.html
+++ b/index.html
@@ -85,23 +85,23 @@
 <body>
     <div id="list">
         <div class="item" data-id="5c178c6bc8b49a1d70668a4f">
-            <img class="thumbnail" src="Scene/image/5c178c6bc8b49a1d70668a4f.png" title="基本几何体" />
+            <img class="thumbnail" src="Scene/image/5c178c6bc8b49a1d70668a4f.png" />
             <div class="title">基本几何体</div>
         </div>
         <div class="item" data-id="5c17930ac8b49b1d70bb6a79">
-            <img class="thumbnail" src="Scene/image/5c17930ac8b49b1d70bb6a79.png" title="各种光源" />
+            <img class="thumbnail" src="Scene/image/5c17930ac8b49b1d70bb6a79.png" />
             <div class="title">各种光源</div>
         </div>
         <div class="item" data-id="5c8dfcb9c8b49b4b943df674">
-            <img class="thumbnail" src="Scene/image/5c8dfcb9c8b49b4b943df674.png" title="寒冰射手" />
+            <img class="thumbnail" src="Scene/image/5c8dfcb9c8b49b4b943df674.png" />
             <div class="title">寒冰射手</div>
         </div>
         <div class="item" data-id="5c8cf9dac8b49b24dceb42e1">
-            <img class="thumbnail" src="Scene/image/5c8cf9dac8b49b24dceb42e1.png" title="MMD播放" />
+            <img class="thumbnail" src="Scene/image/5c8cf9dac8b49b24dceb42e1.png" />
             <div class="title">MMD播放</div>
         </div>
         <div class="item" data-id="5c1798ddc8b49b1d70bb6aa4">
-            <img class="thumbnail" src="Scene/image/5c1798ddc8b49b1d70bb6aa4.png" title="落日喷泉" />
+            <img class="thumbnail" src="Scene/image/5c1798ddc8b49b1d70bb6aa4.png" />
             <div class="title">落日喷泉</div>
         </div>
     </div>
