--- a/index.html
+++ b/index.html
@@ -104,6 +104,10 @@
             <img class="thumbnail" src="Scene/image/5c1798ddc8b49b1d70bb6aa4.png" />
             <div class="title">落日喷泉</div>
         </div>
+        <div class="item" data-id="5c17956bc8b49b1d70bb6a92">
+            <img class="thumbnail" src="Scene/image/5c17956bc8b49b1d70bb6a92.png" />
+            <div class="title">组件演示</div>
+        </div>
     </div>
     <iframe id="content" frameborder="no" border="0" marginwidth="0" marginheight="0" scrolling="no"></iframe>
     <a href="https://github.com/tengge1/ShadowEditor" id="forkMe">
