--- a/index.html
+++ b/index.html
@@ -108,6 +108,10 @@
             <img class="thumbnail" src="Scene/image/5c17956bc8b49b1d70bb6a92.png" />
             <div class="title">组件演示</div>
         </div>
+        <div class="item" data-id="5c389cf4c8b49a2b4841874a">
+            <img class="thumbnail" src="Scene/image/5c389cf4c8b49a2b4841874a.png" />
+            <div class="title">物理引擎</div>
+        </div>
     </div>
     <iframe id="content" frameborder="no" border="0" marginwidth="0" marginheight="0" scrolling="no"></iframe>
     <a href="https://github.com/tengge1/ShadowEditor" id="forkMe">
