--- a/index.html
+++ b/index.html
@@ -112,6 +112,10 @@
             <img class="thumbnail" src="Scene/image/5c389cf4c8b49a2b4841874a.png" />
             <div class="title">物理引擎</div>
         </div>
+        <div class="item" data-id="5c2b5ec5c8b49a1fc06ee84a">
+            <img class="thumbnail" src="Scene/image/5c2b5ec5c8b49a1fc06ee84a.png" />
+            <div class="title">着色器动画</div>
+        </div>
     </div>
     <iframe id="content" frameborder="no" border="0" marginwidth="0" marginheight="0" scrolling="no"></iframe>
     <a href="https://github.com/tengge1/ShadowEditor" id="forkMe">
