修复渲染器设置无效bug。

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
         #forkMe {
             position: absolute;
-            right: 0;
+            right: 220px;
             top: 0;
         }
     </style>
