新增三维GIS演示。

--- a/index.html
+++ b/index.html
@@ -114,6 +114,10 @@
             <img class="thumbnail" src="Scene/image/5c2b5ec5c8b49a1fc06ee84a.png" />
             <div class="title">着色器动画</div>
         </div>
+        <div class="item" data-id="5cb46fa6c8b49a1fdc1ea381">
+            <img class="thumbnail" src="Scene/image/5cb46fa6c8b49a1fdc1ea381.png" />
+            <div class="title">三维GIS</div>
+        </div>
     </div>
     <iframe id="content" src="editor.html" frameborder="no" border="0" marginwidth="0" marginheight="0" scrolling="no"></iframe>
     <a href="https://github.com/tengge1/ShadowEditor" id="forkMe">
