--- a/editor.html
+++ b/editor.html
@@ -26,6 +26,8 @@
     <script src="assets/js/libs/jszip.min.js"></script>
     <script src="assets/js/libs/inflate.min.js"></script>
     <script src="assets/js/libs/gunzip.min.js"></script>
+    <script src="assets/js/d3/d3.js"></script>
+    <script src="assets/js/libs/rbush.js"></script>
 
     <script src="assets/js/SimplexNoise.js"></script>
     <script src="assets/js/ImprovedNoise.js"></script>
