修复名称错误。

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         </div>
         <div class="item" data-id="5c94c6b3c8b49a24585640b3">
             <img class="thumbnail" src="Scene/image/5c94c6b3c8b49a24585640b3.png" />
-            <div class="title">三维GIS</div>
+            <div class="title">补间动画</div>
         </div>
     </div>
     <iframe id="content" src="" frameborder="no" border="0" marginwidth="0" marginheight="0" scrolling="no"></iframe>
